--- a/styles/variables.css
+++ b/styles/variables.css
@@ -40,7 +40,6 @@
     --section-col-gap: 20px;
     --section-columns: 1fr 2fr;
     --section-row-gap: 20px;
-    --page-row-gap: 86px;
     --main-row-gap: 80px;
     --card-image-margin-top: 60px;
     --card-image-template-columns: 1fr 1fr 1fr;
